up to v1.11. more CI builds.

--- a/dcb-os.yml
+++ b/dcb-os.yml
@@ -14,5 +14,10 @@
 - fedora_24
 - fedora_25
 - fedora_26
+- fedora_27
+- fedora_28
+- fedora_29
+- fedora_30
+- ubuntu_bionic
 - ubuntu_trusty
 - ubuntu_xenial
